# ai-trading-agents

./: .codefetchignore  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  DESIGN.md  Dockerfile  PROMPT.md  README.md  TMP.json  TMP.md  TODO.md  extensions.json  main.py  position.md  pyproject.toml  pyrightconfig.json  requirements.txt  schema.prisma
.github/workflows/: cicd..yml
codefetch/: codebase.md
notebooks/: development.ipynb  main.ipynb  test_token_usage.ipynb
notebooks/cutomized-middleware/: main.ipynb
notebooks/yfinance-get-started/: main.ipynb
scripts/: clear_notebook_outputs.py
src/: context.py  db.py  main.py  models.py  secrets.py
src/agents/: __init__.py
src/agents/fundamental_analyst/: agent.py  (+1 more)
src/chief_investment_officer/: agent.py  development.ipynb
src/middleware/: __init__.py
src/prompt/: __init__.py  background.py  chief_investment_officer.md  equity_research_analyst.md  equity_selection_analyst.md  fundamental_analyst.md  market_analyst.md  risk_analyst.md  roles.py  system.py  technical_analyst.md  trading_executor.md
src/services/: utils.py
src/tools/: __init__.py  common_tools.py  fundamental_data_tools.py  handoff_tools.py  learning_tools.py  news_tools.py  portfolio_tools.py  python_tools.py  research_tools.py  risk_tools.py  stock_tooks.py  stock_tools.py  trading_tools.py
src/tools_adaptors/: __init__.py  base.py  common.py  fundamental_data.py  google_equity_research.md  google_research.md  learning.py  news.py  portfolio.py  research.py  risk.py  stocks.py  trading.py
src/typings/: __init__.py  agent_roles.py  agents.py  context.py  langgraph_agents.py  models.py
src/utils/: __init__.py  config.py  constants.py  gmail.py  message.py  portfolio_analysis.py  python.py  ticker.py
tests/: test_python_run_code_security.py
(+60 files in other folders)
