[project]
name = "ai-trading-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.50.1",
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "loguru>=0.7.3",
    "pre-commit>=4.4.0",
    "prisma>=0.15.0",
    "pytz>=2025.2",
    "tqdm>=4.67.1",
    "types-pytz>=2025.2.0.20251108",
    "types-tqdm>=4.67.0.20250809",
    "upstash-redis>=1.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
